--- a/layouts/partials/home_header.html
+++ b/layouts/partials/home_header.html
@@ -17,4 +17,8 @@
   {{ .Site.Params.semester }}
 </div>
 
+<div id="course-description">
+  {{ .Site.Params.description }}
+</div>
+
 <div class="content">
