several changes and course information

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -14,7 +14,7 @@
 <div id="course-info">
   <a href="{{ .Site.Params.school_url }}">{{ .Site.Params.school }}</a> /
   <a href="{{ .Site.Params.department_url }}">{{ .Site.Params.department }}</a> /
-  {{ .Site.Params.semester }}
+  {{ .Site.Params.semester }} / <a href="{{ .Site.BaseURL }}">Home</a>
 </div>
 
 <div class="content">
