--- a/layouts/assignment/single.html
+++ b/layouts/assignment/single.html
@@ -1,8 +1,10 @@
 {{ partial "header.html" . }}
-  
-<h3>{{ .Title }}</h3>
-<h4>{{ .Date.Format "Mon, Jan 2, 2006" }}</h4>
+
+<p>
+  <strong class="assigned">Assigned: {{ .Params.assigned }}</strong> <br>
+  <strong class="due">Due: {{ .Params.due }}</strong>
+</p>
+
 {{ .Content }}
-<p><a href="{{ .Site.BaseURL }}">Home</a></p>
 
 {{ partial "footer.html" . }}
