--- a/layouts/partials/home_header.html
+++ b/layouts/partials/home_header.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<div id="course-title">{{ .Title }}</div>
+<div id="course-title">{{ .Site.Title }}</div>
 <div id="course-info">
   <a href="{{ .Site.Params.school_url }}">{{ .Site.Params.school }}</a> /
   <a href="{{ .Site.Params.department_url }}">{{ .Site.Params.department }}</a> /
