--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -10,11 +10,12 @@
 </head>
 <body>
 
-<div id="course-title">{{ .Title }}</div>
+<div id="course-title">{{ .Site.Title }}</div>
 <div id="course-info">
   <a href="{{ .Site.Params.school_url }}">{{ .Site.Params.school }}</a> /
   <a href="{{ .Site.Params.department_url }}">{{ .Site.Params.department }}</a> /
   {{ .Site.Params.semester }} / <a href="{{ .Site.BaseURL }}">Home</a>
 </div>
+<div id="page-title">{{ .Title }}</div>
 
 <div class="content">
