Added course time/location.
* time and location can now be configured from config.toml.
* added display to main page.
* added server-no-drafts.sh script to run the server without drafts.
  This should be executed before pushing `public/` to master branch.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,10 @@
 {{ partial "home_header.html" . }}
 
+<h3>Time and Location</h3>
+<p>
+  {{ .Site.Params.time }}, {{ .Site.Params.location }}
+</p>
+
 <h3>Course Staff</h3>
 <ul>
   {{ range .Site.Params.staff }}
